--- a/ci/azure-deploy.yml
+++ b/ci/azure-deploy.yml
@@ -16,5 +16,16 @@ jobs:
     inputs:
       secureFile: 'websitecd_ed25519'
 
+  # This doesn't really need to be a secure file, but as long as we're using the
+  # infrastructure ...
+  - task: DownloadSecureFile@1
+    name: knownHost
+    displayName: 'Download known-hosts data'
+    inputs:
+      secureFile: 'newtoncx_knownhost.txt'
+
+  - bash: cat $(knownHost.secureFilePath) >>$HOME/.ssh/known_hosts
+    displayName: Set up SSH known_hosts
+
   - bash: rsync -e 'ssh -i $(sshKey.secureFilePath) -p 2222' -avP $(pipeline.workspace)/website/ newton.cx:zztest/
     displayName: rsync content
