--- a/ci/azure-deploy.yml
+++ b/ci/azure-deploy.yml
@@ -43,5 +43,5 @@ jobs:
   # The authorization of this SSH key on the server has a "command" restriction
   # that forces the rsync operation and restricts things like port forwards. If
   # this command line changes, the authorized_keys file will need to change too.
-  - bash: rsync -e 'ssh -i $(sshKey.secureFilePath)' -avP $(pipeline.workspace)/website/ newton.cx:website/
+  - bash: rsync -e 'ssh -i $(sshKey.secureFilePath)' -avP $(pipeline.workspace)/website/ newton.cx:public_html/
     displayName: rsync content
