Iterate the deploytool workflow (2)

--- a/ci/azure-build.yml
+++ b/ci/azure-build.yml
@@ -14,6 +14,9 @@ jobs:
 
   steps:
 
+  - checkout: self
+    fetchDepth: 0
+
   - bash: |
       curl -fsSL \
         'https://github.com/getzola/zola/releases/download/v${{ parameters.zolaVersion }}/zola-v${{ parameters.zolaVersion }}-x86_64-unknown-linux-gnu.tar.gz' \
