--- a/ci/azure-deploy.yml
+++ b/ci/azure-deploy.yml
@@ -59,12 +59,12 @@ jobs:
   - download: current
 
   - checkout: self
+    fetchDepth: 0
 
   - bash: |
-      git switch -c release
-      git pull --ff-only $(pipeline.workspace)/git-release/release.bundle
-      git show
-    displayName: Restore release commit
+      git switch -c deploy
+      git pull --ff-only $(pipeline.workspace)/git-release/deploy.bundle
+    displayName: Restore deploy commit
 
   - bash: |
       set -euo pipefail
