--- a/ci/azure-build.yml
+++ b/ci/azure-build.yml
@@ -93,12 +93,18 @@ jobs:
       echo "PID: $(system.planId)"
       echo "TID: $(system.timelineId)"
       echo "TPID: $(system.teamProjectId)"
-      u="$(system.collectionUri)$(system.teamProject)/_apis/build/builds/$(build.buildId)/timeline/$(system.timelineId)?api-version=5.1"
-      curl -fsSL "$u"
     displayName: Print stuff
 
   - bash: |
       set -x
-      u="$(system.collectionUri)$(system.teamProject)/_apis/build/builds/$(build.buildId)/timeline/$(system.timelineId)?api-version=5.1"
-      curl -fsSL "$u"
-    displayName: Print again
+      echo "PRI: $(system.pullRequest.pullRequestId)"
+      echo "PRN: $(system.pullRequest.pullRequestNumber)"
+      echo "TBN: $(system.pullRequest.targetBranchName)"
+      echo "SB: $(system.pullRequest.sourceBranch)"
+      echo "SCI: $(system.pullRequest.sourceCommitId)"
+      echo "SRI: $(system.pullRequest.sourceRepositoryURI)"
+      echo "TB: $(system.pullRequest.targetBranch)"
+      echo "BSB: $(build.sourceBranch)"
+      echo "BSN: $(build.sourceBranchName)"
+      echo "BRU: $(build.repository.uri)"
+    displayName: Print other
