--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,10 @@ atomicwrites = "0.4"
 ci_info = "0.14"
 clap = { version = "4.5", features = ["derive"] }
 git2 = "0.19"
+json = "^0.12"
 lazy_static = "1.4"
 log = "0.4"
+reqwest = { version = "^0.12", features = ["blocking"] }
 thiserror = "1.0"
 time = { version = "0.3", features = ["formatting", "parsing"] }
 
