ci: iterate size-report (2)

--- a/ci/azure-build.yml
+++ b/ci/azure-build.yml
@@ -47,6 +47,8 @@ jobs:
   - bash: |
       set -xeuo pipefail
 
+      chmod +x $(pipeline.workspace)/deploytool/deploytool
+
       artifact_dir="$(build.artifactStagingDirectory)/size-report"
       mkdir -p "$artifact_dir"
 
