ci: iterate size-report (5)

--- a/ci/azure-summarize.yml
+++ b/ci/azure-summarize.yml
@@ -29,6 +29,8 @@ jobs:
 
       export GIT_AUTHOR_NAME=deploytool
       export GIT_AUTHOR_EMAIL=deploytool@devnull
+      export GIT_COMMITTER_NAME=$GIT_AUTHOR_NAME
+      export GIT_COMMITTER_EMAIL=$GIT_AUTHOR_EMAIL
 
       git add .
       git commit --allow-empty -m "Ingest post-build metadata"
